    instanceof test.

  * Improvement: removed old methods and classes that were marked deprecated in previous releases.

  * Improvement: added Element#select(Evaluator) and Element#selectFirst(Evaluator), to allow re-use of a parsed CSS
    selector if using the same evaluator many times.
    <https://github.com/jhy/jsoup/issues/1319>

  * Bugfix: in a <select> tag, a second <optgroup> would not automatically close an earlier open <optgroup>
    <https://github.com/jhy/jsoup/issues/1313>

  * Bugfix: in CharacterReader when parsing an input stream, could throw a Mark Invalid exception if the reader was
    marked, a bufferUp occurred, and then the reader was rewound.
    <https://github.com/jhy/jsoup/issues/1324>

  * Bugfix: empty tags and form tags did not have their attributes normalized (lower-cased by default)
    <https://github.com/jhy/jsoup/pull/1323>

  * Bugfix: when preserve case was set to on, the HTML pretty-print formatter didn't indent capitalized tags correctly.

  * Bugfix: ensure that script and style contents are parsed into DataNodes, not TextNodes, when in case-sensitive
    parse mode.


**** Release 1.12.2 [2020-Feb-08]
  * Improvement: the :has() selector now supports relative selectors. For example, the query
    "div:has(> a)" will select all "div" elements that have at least one direct child "a" element.
    <https://github.com/jhy/jsoup/pull/1214>

  * Improvement: added Element chaining methods for various overridden methods on Node.
    <https://github.com/jhy/jsoup/issues/1193>

  * Improvement: ensure HTTP keepalives work when fetching content via body() and bodyAsBytes().
    <https://github.com/jhy/jsoup/issues/1232>

  * Improvement: set the default max body size in Jsoup.Connection to 2MB (up from 1MB) so fewer people get trimmed
    content if they have not set it, but still in sensible bounds. Also updated the default user-agent to improve
    default compatibility.
